--- a/HSPFSimulationManager/HSPFSimulationManager15.vbproj
+++ b/HSPFSimulationManager/HSPFSimulationManager15.vbproj
@@ -93,6 +93,12 @@
     <Compile Include="frmAbout.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmAddConnection.designer.vb">
+      <DependentUpon>frmAddConnection.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmAddConnection.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmHspfSimulationManager.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -147,6 +153,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmAbout.resx">
       <DependentUpon>frmAbout.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAddConnection.resx">
+      <DependentUpon>frmAddConnection.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmHspfSimulationManager.resx">
       <DependentUpon>frmHspfSimulationManager.vb</DependentUpon>
