--- a/.gitignore
+++ b/.gitignore
@@ -394,3 +394,15 @@ atcGraphFromJSON/obj/x86/Debug/atcGraphFromJSON15-4.0.vbproj.FileListAbsolute.tx
 atcGraphFromJSON/obj/x86/Debug/atcGraphFromJSON15.vbproj.FileListAbsolute.txt
 *.force
 HSPEXP/Output/HSPEXP+1.32SetUp.exe
+HSPEXP/bin/x86/Debug/atcControls.dll
+*.xml
+HSPEXP/bin/x86/Debug/atcData.dll
+HSPEXP/bin/x86/Debug/atcGraph.dll
+HSPEXP/bin/x86/Debug/atcList.dll
+HSPEXP/bin/x86/Debug/atcMwGisUtility.dll
+*.FIL
+HSPEXP/bin/x86/Debug/HSPEXP+.chm
+*.exe
+HSPEXP/bin/x86/Debug/HSPEXP+.exe.config
+*.config
+HSPEXP/bin/x86/Debug/HSPEXP+.vshost.exe.manifest
