Updating Gitignore Once More.
Some issues with cache.

--- a/.gitignore
+++ b/.gitignore
@@ -406,3 +406,10 @@ HSPEXP/bin/x86/Debug/HSPEXP+.chm
 HSPEXP/bin/x86/Debug/HSPEXP+.exe.config
 *.config
 HSPEXP/bin/x86/Debug/HSPEXP+.vshost.exe.manifest
+HSPEXP/bin/x86/Debug/HSPEXP+.chm
+HSPEXP/bin/x86/Debug/MapWinUtility.dll
+HSPEXP/bin/x86/Debug/HSPEXP+.chm
+HSPEXP/bin/x86/Debug/atcTimeseriesMath.dll
+HSPEXP/bin/x86/Debug/atcMetCmp.dll
+HSPEXP/bin/x86/Debug/atcHspfSupport.dll
+HSPEXP/bin/x86/Debug/HSPEXP+.chm
