--- a/.gitignore
+++ b/.gitignore
@@ -413,3 +413,8 @@ HSPEXP/bin/x86/Debug/atcTimeseriesMath.dll
 HSPEXP/bin/x86/Debug/atcMetCmp.dll
 HSPEXP/bin/x86/Debug/atcHspfSupport.dll
 HSPEXP/bin/x86/Debug/HSPEXP+.chm
+HSPEXP/bin/x86/Debug/atcDurationCompare.dll
+HSPEXP/bin/x86/Debug/ZedGraph.dll
+HSPEXP/bin/x86/Debug/atcReport.dll
+HSPEXP/bin/x86/Debug/atcWDM.dll
+HSPEXP/bin/x86/Debug/HSPEXP+.chm
