HSPEXP+ Bug Fix and Sensitivity Analysis Code Update
1. In atcHSPFCOnstituentBudget.vb, if ACTIVITY table is missing for a
reach, nothing is returned.
2.  If Sensitivty Analysis is conducted, then the program closes after
the analysis is done.
3. The TimeSeries Stats is updated with the addition of Mean.
GemotericSum is also added but it still needs to be finalized.
4. The ModelParameter class was updated with default values, and
ParmOccurrence variable was added.
5. The UCI file when read as a UCI object is immediately saved, and then
this new file is used for further analysis.
6. A new output WDM file is created (deleted if it already exists) to
save WDM resulting from sensitivity analysis.
7. The text from the sensiivity specification file is trimmed before
being read. Additional error checking has been added.
8.  Before each simulation, the UCI object is saved as a UCI file with
the SimID number.
9.  The RUN parameter in the GLOBAL back is set to 1, as sometimes it
gets set back to 0 after saving.
10. The timeseries for sensitivity analysis are now stored in the new
WDM file.

--- a/.gitignore
+++ b/.gitignore
@@ -418,3 +418,4 @@ HSPEXP/bin/x86/Debug/ZedGraph.dll
 HSPEXP/bin/x86/Debug/atcReport.dll
 HSPEXP/bin/x86/Debug/atcWDM.dll
 HSPEXP/bin/x86/Debug/HSPEXP+.chm
+HSPEXP/bin/x86/Debug/HSPEXP+.chm
