--- a/.gitignore
+++ b/.gitignore
@@ -405,6 +405,7 @@ HSPEXP/bin/x86/Debug/HSPEXP+.chm
 *.exe
 HSPEXP/bin/x86/Debug/HSPEXP+.exe.config
 *.config
+*.log
 HSPEXP/bin/x86/Debug/HSPEXP+.vshost.exe.manifest
 HSPEXP/bin/x86/Debug/HSPEXP+.chm
 HSPEXP/bin/x86/Debug/MapWinUtility.dll
@@ -419,3 +420,4 @@ HSPEXP/bin/x86/Debug/atcReport.dll
 HSPEXP/bin/x86/Debug/atcWDM.dll
 HSPEXP/bin/x86/Debug/HSPEXP+.chm
 HSPEXP/bin/x86/Debug/HSPEXP+.chm
+ScriptRunner/obj/x86/Debug/TempPE/My Project.Resources.Designer.vb.dll
