--- a/atcTimeseriesHDF5/atcTimeseriesHDF515.vbproj
+++ b/atcTimeseriesHDF5/atcTimeseriesHDF515.vbproj
@@ -74,14 +74,14 @@
     <Import Include="System.Diagnostics" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\atcData\atcData15.vbproj">
+    <ProjectReference Include="..\atcData\atcData-D4EM15.vbproj">
       <Project>{A9A00CAD-9EAD-4228-AB08-6DC3BAF253AA}</Project>
-      <Name>atcData15</Name>
+      <Name>atcData-D4EM15</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\atcUtility\atcUtility15.vbproj">
+    <ProjectReference Include="..\atcUtility\atcUtility-D4EM15.vbproj">
       <Project>{67027820-9036-481E-80F6-077E5085F59D}</Project>
-      <Name>atcUtility15</Name>
+      <Name>atcUtility-D4EM15</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\MapWinUtility\MapWinUtility-D4EM15.vbproj">
