--- a/BASINS/SWToolbox15.vbproj
+++ b/BASINS/SWToolbox15.vbproj
@@ -251,8 +251,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <PropertyGroup>
-    <PreBuildEvent>del C:\dev\BASINS40\Bin\Plugins\Basins\basins.dll
-del C:\dev\BASINS40\Bin\Plugins\Basins\GWToolbox.dll</PreBuildEvent>
+    <PreBuildEvent>del C:\dev\BASINS\Bin\Plugins\Basins\basins.dll
+del C:\dev\BASINS\Bin\Plugins\Basins\GWToolbox.dll</PreBuildEvent>
     <PostBuildEvent>
     </PostBuildEvent>
   </PropertyGroup>
