Made a local Solution for AM
And added to ignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -421,3 +421,4 @@ HSPEXP/bin/x86/Debug/atcWDM.dll
 HSPEXP/bin/x86/Debug/HSPEXP+.chm
 HSPEXP/bin/x86/Debug/HSPEXP+.chm
 ScriptRunner/obj/x86/Debug/TempPE/My Project.Resources.Designer.vb.dll
+BASINS40_15_AM.sln
