--- a/.gitignore
+++ b/.gitignore
@@ -197,6 +197,7 @@
 /atcUSGSRora/obj/Debug
 /atcUSGSUtility/obj/Debug
 /atcUSGSWTF/obj/Debug
+/cache/
 atcBasinsObsWQ/atcBasinsObsWQ-D4EM10.vbproj
 atcGraphFromJSON/obj/x86/Debug/atcGraphFromJSON15-4.0.vbproj.FileListAbsolute.txt
 atcGraphFromJSON/obj/x86/Debug/atcGraphFromJSON15.vbproj.FileListAbsolute.txt
