Updated GitIgnore File
To ignore the files in the bin folder.

--- a/.gitignore
+++ b/.gitignore
@@ -147,6 +147,7 @@
 /HSPEXP/pest13/doc
 /HSPEXP/pest13
 /HSPEXP/.vs/config
+/HSPEXP/bin
 /atcUSGSBaseflow/obj/x86/Debug
 /Doc/HSPEXP/Introduction/respec_black.jpg
 /Doc/HSPEXP/log
