--- a/HSPEXP/HSPEXP+-D4EM10_common.vbproj
+++ b/HSPEXP/HSPEXP+-D4EM10_common.vbproj
@@ -182,6 +182,7 @@
     <Compile Include="StartUp.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="WASP.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="HelpForm.resx">
