--- a/atcGraphExperimental/atcGraph-D4EM15.vbproj
+++ b/atcGraphExperimental/atcGraph-D4EM15.vbproj
@@ -91,8 +91,8 @@
     <NoWarn>42016,42017,42018,42019,42032,42353,42354,42355</NoWarn>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
-    <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
-    <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
+    <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
+    <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -120,8 +120,9 @@
     </Reference>
     <Reference Include="System.XML" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="ZedGraph">
-      <HintPath>..\..\..\BASINS40\Bin\ZedGraph.dll</HintPath>
+    <Reference Include="ZedGraph, Version=5.1.3.0, Culture=neutral, PublicKeyToken=02a83cbd123fcd60, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\bin-D4EM15\x86Debug\ZedGraph.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -182,10 +183,12 @@
     <ProjectReference Include="..\atcBasinsObsWQ\atcBasinsObsWQ-D4EM15.vbproj">
       <Project>{7dcb47a0-7b03-4b7c-bc42-b8d920d46604}</Project>
       <Name>atcBasinsObsWQ-D4EM15</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcList\atcList-D4EM15.vbproj">
       <Project>{a1a87cb8-8b9e-4c90-9549-c065357e499f}</Project>
       <Name>atcList-D4EM15</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\MapWinUtility\MapWinUtility-D4EM15.vbproj">
       <Project>{3C991AE4-9EDB-4C24-BAF3-42F7303D7DF3}</Project>
@@ -231,9 +234,6 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
