--- a/TimeseriesUtility/TimeseriesUtility_dn4.vbproj
+++ b/TimeseriesUtility/TimeseriesUtility_dn4.vbproj
@@ -103,9 +103,7 @@
     <Compile Include="frmExtensions.Designer.vb">
       <DependentUpon>frmExtensions.vb</DependentUpon>
     </Compile>
-    <Compile Include="frmExtensions.vb">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="frmExtensions.vb" />
     <Compile Include="frmMain.vb">
       <SubType>Form</SubType>
     </Compile>
