--- a/atcList/atcList-D4EM10.vbproj
+++ b/atcList/atcList-D4EM10.vbproj
@@ -77,7 +77,7 @@
     <DebugSymbols>false</DebugSymbols>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>..\D4EM\bin\x64Debug\</OutputPath>
+    <OutputPath>..\local\x64Debug\Plugins\BASINS\</OutputPath>
     <BaseAddress>285212672</BaseAddress>
     <DocumentationFile>atcList.xml</DocumentationFile>
     <WarningLevel>1</WarningLevel>
