--- a/atcHspfSupport/atcHspfSupport-D4EM10.vbproj
+++ b/atcHspfSupport/atcHspfSupport-D4EM10.vbproj
@@ -99,15 +99,12 @@
     <Reference Include="atcTimeseriesBaseflow">
       <HintPath>..\bin\Plugins\BASINS\atcTimeseriesBaseflow.dll</HintPath>
     </Reference>
-    <Reference Include="atcUSGSBaseflow">
-      <HintPath>..\bin\Plugins\BASINS\atcUSGSBaseflow.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="ZedGraph">
-      <HintPath>..\bin-D4EM10\x86Debug\ZedGraph.dll</HintPath>
+      <HintPath>..\Bin\ZedGraph.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -180,9 +177,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\atcControls\atcControls-D4EM10.vbproj">
-      <Project>{B219575F-1541-41DB-9FA4-D9D7CD62B4A5}</Project>
+      <Project>{b219575f-1541-41db-9fa4-d9d7cd62b4a5}</Project>
       <Name>atcControls-D4EM10</Name>
-      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcData\atcData-D4EM10.vbproj">
       <Project>{A9A00CAD-9EAD-4228-AB08-6DC3BAF253AA}</Project>
@@ -205,9 +201,8 @@
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcUCI\atcUCI-D4EM10.vbproj">
-      <Project>{2FC4314B-792B-40A3-B540-ACA05B9EA86B}</Project>
+      <Project>{2fc4314b-792b-40a3-b540-aca05b9ea86b}</Project>
       <Name>atcUCI-D4EM10</Name>
-      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcUtility\atcUtility-D4EM10.vbproj">
       <Project>{67027820-9036-481E-80F6-077E5085F59D}</Project>
